--- a/hw02/task1.html
+++ b/hw02/task1.html
@@ -58,7 +58,7 @@
 <a href = "https://en.wikipedia.org/wiki/Husky"> About Husky!</a>
 </br>
 <img src = "husky.jpeg" alt = "husky">
-<!-- attribution: Image-source = "https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwinyqf1g-rYAhUwgK0KHZJOAGAQjRwIBw&url=https%3A%2F%2Fwww.dogbreedinfo.com%2Fsiberianhusky.htm&psig=AOvVaw2SDdBUCYCiK6q2cc4i1dvN&ust=1516657577862280" -->
+<!-- attribution: Image-source = "https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Huskiesatrest.jpg/1280px-Huskiesatrest.jpg" -->
 </br>
 <table id  = "multi">
   <tr>
