--- a/hw02/task1.html
+++ b/hw02/task1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset = "UTF-8">
     <title> Welome to Task1 of HW2 </title>
     <style>
 
@@ -44,9 +45,9 @@
   </head>
   <body>
     <a href = "https://www.w3schools.com/html/"> Learn HTML </a>
-</br>
+<br>
 <a href = "https://www.w3schools.com/css/"> Lean CSS </a>
-</br>
+<br>
 <h1>
   <span style = 'color: blue'>H</span>
   <span style = 'color: red'>U</span>
@@ -54,12 +55,12 @@
   <span style = 'color: green'>K</span>
   <span style = 'color: black'>Y</span>
 </h1>
-</br>
+<br>
 <a href = "https://en.wikipedia.org/wiki/Husky"> About Husky!</a>
-</br>
+<br>
 <img src = "husky.jpeg" alt = "husky">
 <!-- attribution: Image-source = "https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Huskiesatrest.jpg/1280px-Huskiesatrest.jpg" -->
-</br>
+<br>
 <table id  = "multi">
   <tr>
     <th>x</th>
@@ -101,6 +102,6 @@
     <td>7</td>
     <td>128</td>
   </tr>
-  <table>
+  </table>
 </html>
 
