--- a/hw02/task2.html
+++ b/hw02/task2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset = "UTF-8">
     <title> Welome to Task2 of HW2 </title>
     <style>
       .button{
