--- a/hw02/task3.html
+++ b/hw02/task3.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="zxx">
   <head>
+    <meta charset = "UTF-8">
     <title> Welome to Task3 of HW2 </title>
     <style>
       *{
@@ -21,7 +22,7 @@
 
       .clearfix::after{
       content: "";
-      clear: "both";
+      clear: both;
       display: table;
       }
 
@@ -46,13 +47,14 @@
     <div class = "clearfix">
       <div class = "leftlist column">
 	<ul>
-	  <a href = # id = "link1"><li>Lorem Ipsem</li></a>
-	  <a href = # id = "link2"><li>99 Bottles</li></a>
-	  <a href = # id = "link3"><li>Last Thing</li></a>
+	  <li><a href = # id = "link1">Lorem Ipsem</a></li>
+	  <li><a href = # id = "link2">99 Bottles</a></li>
+	  <li><a href = # id = "link3">Last Thing</a></li>
 	</ul>
       </div>
       <div class = "right column">
 	<p id = "para"></p>
+      </div>
       </div>
       <div class = "click1" id = "click1">
 <!-- source: "https://en.wikipedia.org/wiki/Lorem_ipsum"-->
@@ -60,7 +62,8 @@
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-         <script>
+      </div>
+      <script>
 	var text = "";
 	var i;
       (function(){
