--- a/hw02/index.html
+++ b/hw02/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title> Hw02</title>
+   <head>
+     <meta charset = "UTF-8">
+     <title> Hw02</title>
   </head>
   <body>
     <h1> Welcome to HW02. </h1>
